| Summary: | ASTERISK-22554: Log message says we received a 408, when in reality we didn't receive anything. Clarify the log message. | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-09-18 14:00:05 | Date Closed: | 2013-10-14 10:55:38 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_registration |
| Versions: | SVN 12.0.0-alpha1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | 1. PJSIP set up to register outbound to another Asterisk system.
2. The other Asterisk system doesn't exist, isn't turned on, etc In debug you'll see we send out the REGISTER, and then show this (VERBOSE?) message after it times out. {noformat} Temporal response '408' received from 'sip:triton' on registration attempt to 'sip:reg2@triton:5060', retrying in '60' seconds {noformat} This can be confusing since we didn't receive anything from the far end. Can we change the wording of the message, or have logic added for when we don't receive any response? If we consider this a 408, because we don't receive a response, then maybe we should say something like: "Considering response a '408', since no response received from 'sip:triton' on registration attempt to 'sip:reg2@triton:5060', retrying in '60' seconds" | ||
| Comments: | By: David Woolley (davidw) 2013-09-19 05:22:39.951-0500 Although it be more helpful if not reported as a virtual 408 response, looking at the support forums, it looks like many SIP phones also use virtual 408 responses to report timeouts. By: Rusty Newton (rnewton) 2013-09-25 09:34:41.641-0500 Yeah that is confusing. I'd prefer at a minimum to make it clear to the user that no response was received. If internally we still consider it a 408 then that is fine with me. I'm just concerned about the presentation to the user. | ||